# xenterval

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
tests/: test_color_names.py  test_common.py  test_fjs_names.py  test_interval.py  test_ji_subgroup.py  test_monzo.py  test_primes.py  test_ratios.py  test_tuning.py  test_xenterval.py
xenterval/: __init__.py  _common.py  _primes.py  _ratios.py  _xenwiki.py  ji.py  tuning.py  typing.py
xenterval/interval/: __init__.py
xenterval/interval/name/: color.py  fjs.py
